--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,81 @@
     <groupId>com.universeparticle</groupId>
     <artifactId>spring-template</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>nacos-clientA</module>
+        <module>nacos-clientB</module>
+        <module>nacos-clientb-dubbo</module>
+    </modules>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-parent</artifactId>
+        <version>3.0.2</version>
+    </parent>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2022.0.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2022.0.0.0-RC1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+<!--            <dependency>-->
+<!--                <groupId>org.apache.dubbo</groupId>-->
+<!--                <artifactId>dubbo-bom</artifactId>-->
+<!--                <version>3.2.0</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
+
+<!--            <dependency>-->
+<!--                <groupId>org.apache.dubbo</groupId>-->
+<!--                <artifactId>dubbo-bom</artifactId>-->
+<!--                <version>3.1.5</version>-->
+<!--            </dependency>-->
+        </dependencies>
+    </dependencyManagement>
+
+
+<!--        <repositories>-->
+<!--            <repository>-->
+<!--                <id>spring</id>-->
+<!--                <url>https://maven.aliyun.com/repository/spring</url>-->
+<!--                <releases>-->
+<!--                    <enabled>true</enabled>-->
+<!--                </releases>-->
+<!--                <snapshots>-->
+<!--                    <enabled>false</enabled>-->
+<!--                </snapshots>-->
+<!--            </repository>-->
+<!--            <repository>-->
+<!--                <id>central</id>-->
+<!--                <url>https://maven.aliyun.com/repository/central</url>-->
+<!--                <releases>-->
+<!--                    <enabled>true</enabled>-->
+<!--                </releases>-->
+<!--                <snapshots>-->
+<!--                    <enabled>false</enabled>-->
+<!--                </snapshots>-->
+<!--            </repository>-->
+<!--        </repositories>-->
+
 
 </project>
